[gd_scene load_steps=8 format=2]

[ext_resource path="res://ObjectsRelated/Objects/BaseObject.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObjectsRelated/Objects/Imps/BaseEnemy/AesthRelateds/_Assets/BaseEnemy_Frame.png" type="Texture" id=2]
[ext_resource path="res://ObjectsRelated/Objects/Imps/BaseEnemy/BaseEnemy.gd" type="Script" id=3]
[ext_resource path="res://ObjectsRelated/Objects/Imps/BaseEnemy/AesthRelateds/RobotFace/RobotFace.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 18.0278

[node name="BaseEnemy" instance=ExtResource( 1 )]
script = ExtResource( 3 )
body_mode_to_use = 2
enemy_type = 0
aim_trajectory_type = 0
aim_occulder_type = 0
target_detection_mode_id = 0
starting_attack_cooldown_mode_id = 0
starting_activation_mode_id = 0

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="CollForProjOrPlayer" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollForProjOrPlayer" index="0"]
shape = SubResource( 3 )

[node name="WeaponSpriteContainer" type="Node2D" parent="." index="3"]

[node name="RobotFace" parent="." index="4" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0.627451 )

[connection signal="body_entered" from="CollForProjOrPlayer" to="." method="_on_CollForProjOrPlayer_body_entered"]
